# Decoding

./: .gitignore  README.md  compute.py  compute_ISC.py  create_output_dirs.sh  decode.ipynb  decode.py  figures.ipynb  grid_search.db  grid_search.py  main.py  preprocess.py  pyproject.toml  requirements.txt  temporary_processing.ipynb
configs/: config.yaml  config_smn4lang.yaml  experiment_baselines.yaml  experiment_fine_tune.yaml  experiment_fine_tune_fmriprep.yaml  experiment_increase_data.yaml  experiment_increase_data_123.yaml  experiment_increase_data_mean.yaml  experiment_increase_subjects.yaml  experiment_lebel.yaml  experiment_multi_subject.yaml  experiment_overlap.yaml  experiment_overlap_classical.yaml  experiment_setup.yaml  experiment_single_subject.yaml  experiment_single_subject_fmriprep.yaml  experiment_smn4lang.yaml  experiment_subj_data_dim_overlap.yaml  experiment_subject_4.yaml  experiments.yaml  grid_search.yaml  grid_search_lebel.yaml  grid_search_mixco.yaml  grid_search_smn4lang.yaml  joblib.yaml  multirun.yaml  optuna.yaml  slurm.yaml  slurm_JZ.yaml  slurm_JZ_V100.yaml  test.yaml  test_fine_tune.yaml  test_ft.yaml
configs/baseline/: performance_ceiling.yaml  random.yaml
configs/decoder_cfg/: base.yaml  brain_decoder.yaml  random.yaml  simple_mlp.yaml
configs/fine_tune_cfg/: lebel_3.yaml  none.yaml  test.yaml
configs/hydra/hydra_logging/: custom.yaml
configs/splitting/: base.yaml  cv.yaml  train_test.yaml
configs/subjects/: balanced_123.yaml  lebel_123.yaml  lebel_fmriprep_123.yaml
outputs/2024-12-02/22-17-40/: optimization_results.yaml
outputs/2024-12-02/22-19-52/: optimization_results.yaml
scripts/combinations/: gen_configs.py
scripts/fine_tune/: gen_configs.py
scripts/grid_search/: gen_configs.py
scripts/nb_voxels/: gen_configs.py
scripts/setup/: gen_configs.py
scripts/wrap_up/fine_tune/: gen_configs.py
scripts/wrap_up/grid_search/: gen_configs.py
scripts/wrap_up/left_out/: gen_configs.py
scripts/wrap_up/multi_subjects/: gen_configs.py
scripts/wrap_up/semantics_syntax/: gen_configs.py
scripts/wrap_up/single_subjects/: gen_configs.py
src/: base_decoders.py  brain_decoder.py  brain_decoder_multi_subject.py  decoder_wrapper.py  decoders.py  decoding.py  evaluate.py  evaluator.py  fast_ridge.py  fetch_data.py  lebel2023_preprocess.py  li2022_preprocess.py  losses.py  main.py  metrics.py  nlp_metrics.py  prepare_data.py  prepare_latents.py  preprocess.py  ridge copy.py  ridge.py  skorch.py  smn4lang_preprocess.py  textgrids.py  train.py  train_multi_subject.py  utils.py  wandb_wrapper.py
src/config/: config.yaml
src/config/decoder_cfg/: brain_decoder.yaml
src/config/fine_tune_cfg/: default.yaml  none.yaml
src/config/splitting/: base.yaml  cv.yaml
