[tool.pyright]
include = ["src"]
exclude = [".cache", ".env", "data", "datasets"]
venvPath = "."
venv = ".env"
typeCheckingMode = "off"

[tool.poetry]
name = "decoding"
version = "0.1.0"
description = ""
authors = ["Louis Jalouzot <ljalouzot1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
rich = "^13.7.1"
torch = "^2.2.0"
joblib = "^1.4.2"
numpy = "^1.26.4"
ftfy = "^6.2.0"
regex = "^2024.4.28"
setuptools = "^69.5.1"
scikit-learn = "^1.4.2"
wandb = "^0.17.0"
torchmetrics = "^1.4.0.post0"
torchaudio = "^2.3.0"
termcolor = "^2.4.0"
pytorch-ignite = "^0.5.0.post2"
visdom = "^0.2.4"
librosa = "^0.10.2.post1"
sentence-transformers = { version = "^3.0.1", extras = ["train"] }
torchvision = "^0.18.1"
transformers = "^4.41.2"
pandas = "^2.2.2"
soundfile = "^0.12.1"
nibabel = "^5.2.1"
chardet = "^5.2.0"
nilearn = "^0.10.4"
joblib-progress = "^1.0.5"
h5py = "^3.11.0"
nltk = "^3.9.1"
werpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
